Mon Aug  2 19:20:18 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (reject): Don't clobber the given token string
 	if it doesn't turn out to be a real token.
	(_showtokens): Call get_done when finished enumerating the tokens.

	* lib/Mj/Token.pm (t_recognize): Don't return the random value in
 	$1 if the string doesn't look like a token.

	* lib/Mj/SimpleDB/DB.pm: Create and destroy the database on _every
 	call_ to get rid of concurrency problems.

Sat Jul 31 00:07:25 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Config.pm (parse_xform_array): Add 'equate domain1 and
 	domain2' syntax to addr_xforms.

	* lib/Mj/Access.pm (_d_post): Deal with list:auxlist syntax in
 	restrict_post.

Fri Jul 30 17:35:03 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Config.pm (parse_restrict_post): Remove ':' as a possible
 	separator.

	* lib/Majordomo.pm (_fill_lists): Make return value a little more
 	meaningful.

Tue Jul 27 00:53:35 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* setup/ask_domain.pl (ask_domain): Turn Mj1 conversion questions
 	back on.

	* setup/query_util.pl (get_dir): Require pathnames be absolute.

Fri Jul 23 12:11:53 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/SimpleDB/DB.pm (mogrify): Dumb bug made returning
 	undefined key (implying that the entry should not be deleted) not
 	work.

1999-07-20  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* bin/mj_shell: Applied patch bu Anton Berezin to fix various
	  unquoted regexp metachars.

Sun Jul 18 14:12:55 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (new): addr_xforms is now a parsed variable, so
 	conig_get returns a ref, not an array.

	* lib/Mj/Config.pm (parse_xform_array): Make xform_array a parsed
 	type; do some simple substitutions so folks can write 'ignore
 	case' instead of /(.*)/\L$1/.

Sat Jul 17 10:13:15 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/RegList.pm: